--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
                         <ul class="link-list">
                             <li><a href="#">Help Center</a></li>
                             <li><a href="contact.html">Contact Us</a></li>
-                            <li><a href="#">Status Page</a></li>
+                            <li><a href="status.html">Status Page</a></li>
                             <li><a href="#">Community</a></li>
                         </ul>
                     </div>
