--- a/pricing.html
+++ b/pricing.html
@@ -657,8 +657,8 @@
                         <h4 class="link-title">Support</h4>
                         <ul class="link-list">
                             <li><a href="#">Help Center</a></li>
-                            <li><a href="index.html#contact">Contact Us</a></li>
-                            <li><a href="#">Status Page</a></li>
+                            <li><a href="contact.html">Contact Us</a></li>
+                            <li><a href="status.html">Status Page</a></li>
                             <li><a href="#">Community</a></li>
                         </ul>
                     </div>
@@ -667,9 +667,9 @@
             <div class="footer-bottom">
                 <p class="copyright">© 2025 CloudCompute Pro. All rights reserved.</p>
                 <div class="legal-links">
-                    <a href="#">Privacy Policy</a>
-                    <a href="#">Terms of Service</a>
-                    <a href="#">Cookie Policy</a>
+                    <a href="privacy-policy.html">Privacy Policy</a>
+                    <a href="terms-of-service.html">Terms of Service</a>
+                    <a href="cookie-policy.html">Cookie Policy</a>
                 </div>
             </div>
         </div>
